--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
 
     .cta-button {
-      background: #ffcc00;
+      background: #00ff99;
       color: #000;
       padding: 15px 30px;
       font-size: 1.2rem;
